Revert "attempting to fix bgContianer images to stretch to full screen for mobile devices"
This reverts commit 843f0bf5b8e2f9ee61e0b781e626daf8b52d545f.

--- a/assets/css/storyteller/storyteller.css
+++ b/assets/css/storyteller/storyteller.css
@@ -192,7 +192,7 @@ h2 {
     background-color: transparent;
     background-repeat: no-repeat;
     background-position: center center;
-    /* background-size: cover;  sizing done with js now*/
+    background-size: cover;
     background-attachment: fixed;
     }
 
